# wc2026-momentum

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: README.md  match_ids.json
data/processed/: accl_meta.json  acclimatization.parquet  copa2024_placebo.parquet  cwc2025_placebo.parquet  euro2024_placebo.parquet  goldcup_placebo.parquet  historical_placebo.parquet  matches.json  momentum.json  placebo2026.parquet  stoppages.parquet  twfe.json  wc2022_placebo.parquet
deploy/railway/: Dockerfile  README.md  daily.sh  railway.json
notebooks/: 01_explore.py
reports/: automation.md  historical_placebo.md  linkedin_post.md  tos_review.md  writeup.md
reports/audit/: 2026-06-24-audit.md
reports/figures/: render_state.json
scripts/: daily.ps1
snapshots/2026-06-22/: summary.json
snapshots/2026-06-23/: acclimatization.json  summary.json
snapshots/2026-06-24/: summary.json
snapshots/2026-06-25/: summary.json
snapshots/2026-06-26/: summary.json
snapshots/2026-06-27/: summary.json
src/: paths.py  pipeline.py  snapshot.py
tests/: conftest.py  generate_synthetic_fixture.py  test_acclimatization.py  test_commentary_sources.py  test_editorial.py  test_enrich.py  test_espn.py  test_event_features.py  test_explain.py  test_fotmob.py  test_method.py  test_modal_smoke.py  test_per_match.py  test_pipeline_guards.py  test_recon.py  test_reel_smoke.py  test_regression.py  test_sensitivity.py  test_social.py  test_static_charts.py  test_stoppages.py  test_story_smoke.py  test_windowing.py
(+57 files in other folders)
